--- a/style/main.css
+++ b/style/main.css
@@ -135,14 +135,16 @@ input:active {
 .brandName {
   font-size: 1.9rem;
   font-weight: 300;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-transform: uppercase;
   padding-right: 10%;
 }
 .brandName__href {
   margin-right: 27px;
+}
+.brandName_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu {
@@ -344,6 +346,7 @@ input:active {
   grid-column: span 2;
   background-image: url("../images/sale30.jpg");
   background-repeat: no-repeat;
+  filter: brightness(0.9);
 }
 .banner__slider__text {
   padding-top: 146px;
@@ -371,8 +374,97 @@ input:active {
 
 .lure {
   margin-top: 97px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  filter: contrast(0.6);
 }
 
-/* TODO 1) задний фон */
+.feedback {
+  background-image: url("../images/subscribe.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-right: 0.5px solid lightgrey;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.feedback__text-box {
+  display: flex;
+  align-items: center;
+  padding-top: 120px;
+}
+.feedback__text {
+  width: 340px;
+  margin-left: 60px;
+}
+.feedback__name {
+  text-transform: capitalize;
+  font-size: 1.14rem;
+}
+.feedback__city {
+  font-size: 0.8rem;
+}
+
+.pagination {
+  display: flex;
+  padding-bottom: 156px;
+  padding-top: 25px;
+}
+.pagination__block {
+  background-color: #d6d6d6;
+  width: 36px;
+  height: 5px;
+  margin-right: 15px;
+}
+.pagination__block_activ {
+  background-color: #f16d7f;
+}
+
+.subscribe {
+  background-image: url("../images/subscribe2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-left: 0.5px solid lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+.subscribe__text-box {
+  padding-bottom: 35px;
+}
+.subscribe__h {
+  font-size: 1.7rem;
+  text-transform: uppercase;
+}
+.subscribe__text {
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+.subscribe__form {
+  position: relative;
+}
+.subscribe__email {
+  padding: 10px 48px 10px 28px;
+  background-color: #e1e1e1;
+  border-radius: 23px;
+  text-transform: capitalize;
+}
+.subscribe__button {
+  background-color: #f16d7f;
+  color: #ffffff;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  padding: 10px 20px 10px 20px;
+  position: absolute;
+  left: 193px;
+  top: 0;
+}
+
+.lower {
+  display: grid;
+  grid-template-columns: 427px 160px 160px 160px;
+}
 
 /*# sourceMappingURL=main.css.map */
