--- a/style/_mixin.sass
+++ b/style/_mixin.sass
@@ -3,3 +3,13 @@
   display: flex
   justify-content: center
   align-items: center
+
+=flex-between()
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+=animation()
+  background-color: white
+  color: $main-color
+  outline: 1px solid $main-color
