--- a/style/main.css
+++ b/style/main.css
@@ -113,6 +113,80 @@ input:active {
 .header__cart {
   padding: 5px;
 }
+.header__browse-box {
+  display: flex;
+  position: relative;
+  /*&:hover .drop
+  * display: flex */
+}
+.header__brow:hover .drop {
+  display: flex;
+}
+.header__cart-box {
+  position: relative;
+}
+.header__cart-box:hover .drop {
+  display: flex !important;
+}
+
+.header__summary_browse:hover {
+  display: flex;
+}
+
+.purchases {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  grid-gap: 15px;
+}
+.purchases__h {
+  text-transform: uppercase;
+  font-size: 1.16rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.purchases__star-box {
+  display: flex;
+  color: gold;
+  margin-bottom: 12px;
+}
+.purchases__quantity-box {
+  display: flex;
+  color: #f16d7f;
+}
+.purchases__total-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 35px 0;
+}
+
+.button-checkout {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 11px;
+}
+
+.button-href {
+  padding: 17px 70px;
+  width: max-content;
+}
+
+.total__text, .total__price {
+  text-transform: uppercase;
+  font-size: 1.14rem;
+  font-weight: bold;
+}
+
+.quantity {
+  margin-right: 3.5px;
+}
 
 .cartHref {
   margin-right: 21px;
@@ -128,7 +202,14 @@ input:active {
   color: white;
 }
 
+.logo {
+  transition: 3s;
+  animation: 3s;
+}
 .logo_header {
+  padding-right: 18.5%;
+}
+.logo_lower {
   padding-right: 18.5%;
 }
 
@@ -146,6 +227,9 @@ input:active {
   justify-content: center;
   align-items: center;
 }
+.brandName_lower {
+  display: flex !important;
+}
 
 .menu {
   margin-bottom: 15px;
@@ -159,14 +243,90 @@ input:active {
 .menu__list {
   padding: 10px;
   font-weight: bold;
+  margin-right: 10px;
+  position: relative;
+  border-bottom: 1px solid #ffffff;
+}
+.menu__list:hover .drop {
+  display: flex;
+}
+.menu__href {
   text-transform: uppercase;
-  margin-right: 31px;
+  padding: 25px;
+}
+
+.drop {
+  border-radius: 5px;
+  background-color: #ffffff;
+  border: 1px solid #ececec;
+  padding: 12px 20px;
+  display: none;
+  position: absolute;
+  top: 51px;
+  left: -5px;
+  z-index: 1;
+}
+.drop:before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background-color: #ffffff;
+  position: absolute;
+  transform: rotate(45deg);
+  top: -8px;
+  left: 49px;
+  border-top: 1px solid #e8e8e8e8;
+  border-left: 1px solid #e8e8e8e8;
+}
+.drop__flex {
+  width: 235px;
+  margin-right: 46px;
+}
+.drop__flex:last-of-type {
+  margin-right: 0;
+}
+.drop__ul {
+  list-style: none;
+}
+.drop__h {
+  border-bottom: 1px solid #e8e8e8;
+  font-size: 1rem;
+  letter-spacing: 0.35px;
+  color: #232323;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  margin-bottom: 8px;
+}
+.drop__link {
+  font-size: 1rem;
+  line-height: 2;
+  letter-spacing: 0.35px;
+  color: #4f4f4f;
+}
+.drop__img {
+  width: 227px;
+  height: 150px;
+}
+.drop__right {
+  right: 0;
+  left: auto;
+}
+.drop__right:before {
+  right: 61px;
+  left: auto;
+}
+.drop__purchases {
+  background-color: rgba(232, 232, 232, 0.9);
+  flex-direction: column;
+  left: -33px;
 }
 
 .promo {
   background-color: #e8e8e8;
   background-image: url("../images/Layer_24.jpg");
   background-position: right;
+  background-repeat: no-repeat;
   height: 620px;
   display: flex;
   align-items: center;
@@ -196,6 +356,8 @@ input:active {
 }
 .promoFor__slider {
   position: relative;
+  background-color: #f16d7f;
+  transition: 0.5s;
 }
 .promoFor__slider_big {
   grid-row: span 2;
@@ -232,6 +394,7 @@ input:active {
   top: 5%;
   text-transform: uppercase;
   padding: 15px 20px 15px 20px;
+  transition: 0.4s;
 }
 .promoFor__name {
   font-size: 1.5rem;
@@ -261,6 +424,7 @@ input:active {
 
 .product {
   position: relative;
+  transition: 0.4s;
 }
 .product:hover {
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
@@ -325,6 +489,7 @@ input:active {
   color: white;
   text-transform: uppercase;
   font-size: 1.14rem;
+  transition: 0.5s;
 }
 
 .banner {
@@ -411,7 +576,7 @@ input:active {
   padding-top: 25px;
 }
 .pagination__block {
-  background-color: #d6d6d6;
+  background-color: #ffffff;
   width: 36px;
   height: 5px;
   margin-right: 15px;
@@ -441,15 +606,15 @@ input:active {
 .subscribe__text {
   font-size: 1rem;
   text-transform: uppercase;
+  line-height: 1.63;
 }
 .subscribe__form {
   position: relative;
 }
 .subscribe__email {
-  padding: 10px 48px 10px 28px;
+  padding: 10px 120px 10px 28px;
   background-color: #e1e1e1;
   border-radius: 23px;
-  text-transform: capitalize;
 }
 .subscribe__button {
   background-color: #f16d7f;
@@ -458,13 +623,345 @@ input:active {
   border-top-right-radius: 30px;
   padding: 10px 20px 10px 20px;
   position: absolute;
-  left: 193px;
+  left: 232px;
   top: 0;
+  transition: 0.5s;
 }
 
 .lower {
   display: grid;
-  grid-template-columns: 427px 160px 160px 160px;
+  grid-template-columns: 427px 1fr 1fr 1fr;
+  grid-gap: 69px;
+  margin-top: 109px;
+  padding-bottom: 89px;
+}
+.lower__h {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  margin-top: 15px;
+}
+.lower__ul {
+  list-style: none;
+  font-size: 1.14rem;
+  margin-top: 54px;
+}
+.lower__li {
+  color: #898989;
+  text-transform: capitalize;
+  margin-top: 26px;
+}
+
+.description__text, .description__text_lower {
+  color: #898989;
+  font-size: 1rem;
+  font-weight: 300;
+  margin-top: 41px;
+  line-height: 1.71;
+}
+.logo-box {
+  display: flex;
+  align-items: center;
+}
+
+.footer {
+  background-color: #e6e6e6;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.footer__text {
+  font-size: 1.14rem;
+  color: #7a7a7a7a;
+  line-height: 2.63;
+}
+.footer__right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__href {
+  margin-left: 8px;
+}
+.footer__media {
+  width: 32px;
+  height: 32px;
+  background-color: #ffffff;
+  color: #b2b2b2b2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bread-crumbs {
+  background-color: #f8f3f4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bread-crumbs__text {
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 1.7rem;
+  padding: 65px 0;
+}
+.bread-crumbs__href {
+  text-transform: uppercase;
+  color: #636363;
+}
+.bread-crumbs__href_active {
+  color: #f16d7f;
+}
+
+.checkoutPage__summary {
+  display: block;
+}
+.checkoutPage__summary::-webkit-details-marker {
+  display: none;
+}
+
+.checkoutPage {
+  margin-top: 89px;
+}
+.checkoutPage__details {
+  border-bottom: 1px solid #e8e8e8;
+}
+.checkoutPage__details[open] {
+  padding-bottom: 79px;
+}
+.checkoutPage__guest {
+  margin-right: 291px;
+  display: flex;
+  flex-direction: column;
+}
+.checkoutPage__flex {
+  margin-left: 35px;
+  display: flex;
+}
+.checkoutPage__summary {
+  font-size: 1.14rem;
+  font-weight: bold;
+  color: #222222;
+  text-transform: uppercase;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.checkoutPage__h {
+  font-size: 1.07rem;
+  padding-bottom: 15px;
+  text-transform: uppercase;
+}
+.checkoutPage__p {
+  font-size: 13px;
+  color: #b3b2b2;
+  padding-bottom: 34px;
+  white-space: nowrap;
+}
+.checkoutPage__form {
+  display: flex;
+  flex-direction: column;
+}
+.checkoutPage__continue {
+  padding: 19px 54px;
+  text-transform: uppercase;
+  font-weight: bold;
+  display: inline-block;
+  border: 1px solid #eaeaea;
+}
+.checkoutPage__a-log {
+  width: 180px;
+  height: 50px;
+  border: solid 1px #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  color: #4a4a4a;
+  font-weight: bold;
+}
+.checkoutPage__forgot {
+  line-height: 1.43;
+}
+.checkoutPage__button-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.guest, .register {
+  font-size: 12px;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  padding-left: 12px;
+}
+.guest__box, .register__box {
+  padding-bottom: 20px;
+}
+
+.register__box {
+  padding-bottom: 33px;
+}
+.register__input {
+  width: 376px;
+  height: 30px;
+  border: solid 1px #eaeaea;
+  padding: 14px;
+  font-size: 1.5rem;
+  margin-bottom: 22px;
+}
+.register__fileds {
+  color: #ff0d0d;
+  padding-bottom: 32px;
+}
+
+.plus {
+  padding-bottom: 38px;
+  white-space: nowrap;
+}
+.plus__p {
+  font-size: 13px;
+  color: #b3b2b2;
+  padding-bottom: 15px;
+}
+
+.email__label {
+  margin-bottom: 16px;
+}
+
+@-webkit-keyframes color-change-2x {
+  20% {
+    background: #19dcea;
+  }
+  100% {
+    background: #b22cff;
+  }
+}
+@keyframes color-change-2x {
+  20% {
+    background: #19dcea;
+  }
+  100% {
+    background: #b22cff;
+  }
+}
+@keyframes logo-rotate {
+  25% {
+    transform: rotate(95deg);
+  }
+  43% {
+    transform: rotate(78deg);
+  }
+  63% {
+    transform: rotate(95deg);
+  }
+}
+.header:hover {
+  -webkit-animation: color-change-2x 5s linear infinite alternate both;
+  animation: color-change-2x 5s linear infinite alternate both;
+}
+
+.header__summary_account:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+}
+
+.header__cart:hover {
+  outline: 1px solid #e8e8e8;
+}
+
+.menu__list:hover {
+  border-bottom: 1px solid #f16d7f;
+}
+
+.drop__link:hover {
+  color: #f16d7f;
+}
+
+.promoFor__slider:hover .promoFor__textBox {
+  border: 1.5px solid #f16d7f;
+  background-color: #fff6fe;
+}
+
+.promoFor__slider:hover {
+  transform: scale(1.01, 1.01);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.button-box__button:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+}
+
+.pagination__block:hover {
+  background-color: #f16d7f;
+  transform: scale(1.01, 1.01);
+}
+
+.subscribe__button:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+  outline: none;
+  border: none;
+}
+
+.logo_header:hover {
+  transform: rotate(90deg);
+}
+
+.logo_lower:hover {
+  animation: logo-rotate 3s;
+}
+
+.lower__li:hover {
+  color: #f16d7f;
+}
+
+.footer__media:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+}
+
+.purchases__cross:hover {
+  color: #f16d7f;
+}
+
+.button-checkout:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+}
+
+.button-checkout:hover .button-href {
+  color: #f16d7f;
+}
+
+.bread-crumbs__href:hover {
+  color: #f16d7f;
+}
+
+.checkoutPage__continue:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+}
+
+.checkoutPage__a-log:hover {
+  background-color: white;
+  color: #f16d7f;
+  outline: 1px solid #f16d7f;
+}
+
+.checkoutPage__forgot:hover {
+  color: #f16d7f;
 }
 
 /*# sourceMappingURL=main.css.map */
